<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".HomeFragement">
    <ScrollView android:layout_width="wrap_content" android:layout_height="match_parent">
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E000000">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:background="@drawable/borders_home">


        <TextView
                android:id="@+id/manufacturer_recycler_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_marques"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/manufacturer_recycler_view"
                android:layout_marginBottom="8dp" android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/manufacturer_recycler_view_viewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_view_all"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/manufacturer_recycler_view"
                android:layout_marginBottom="8dp" android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/manufacturer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/manufacturer_list_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/manufacturer_recycler_view_title"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:background="@drawable/borders_home">


        <TextView
                android:id="@+id/new_cars_recycler_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_nouvelles_voitures"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/new_cars_recycler_view"
                android:layout_marginBottom="8dp" android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/new_cars_recycler_view_viewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_view_all"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/new_cars_recycler_view"
                android:layout_marginBottom="8dp" android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_cars_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/new_car_list_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/new_cars_recycler_view_title"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:background="@drawable/borders_home">


        <TextView
                android:id="@+id/ads_recycler_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_voitures_occasions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/ads_recycler_view"
                android:layout_marginBottom="8dp" android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/ads_recycler_view_viewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_view_all"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/ads_recycler_view"
                android:layout_marginBottom="8dp" android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ads_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/new_car_list_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ads_recycler_view_title"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

    </ScrollView>
</layout>